--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,45 +49,44 @@ dependencies {
     implementation project(path: ':data')
     implementation project(path: ':domain')
 
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation "androidx.core:core-ktx:$ktx_core"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_runtime"
+    implementation "androidx.activity:activity-compose:$activity_compose"
+    testImplementation "junit:junit:$junit"
+    androidTestImplementation "androidx.test.ext:junit:$junit_ext"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
     implementation "androidx.compose.runtime:runtime-livedata:1.1.1"
 
     // Koin
-    def koin_version= "3.2.0"
     implementation "io.insert-koin:koin-android:$koin_version"
 
     // Jetpack Compose
     implementation "io.insert-koin:koin-androidx-compose:$koin_version"
 
     // Android navigation
-    def nav_version = "2.5.2"
     implementation "androidx.navigation:navigation-compose:$nav_version"
 
     // Coil
-    implementation 'io.coil-kt:coil-compose:2.2.1'
+    implementation "io.coil-kt:coil-compose:$coil"
 
     // Material 3
-    implementation "androidx.compose.material3:material3:1.0.0-beta02"
-    implementation "androidx.compose.material3:material3-window-size-class:1.0.0-beta02"
+    implementation "androidx.compose.material3:material3:$material3"
+    implementation "androidx.compose.material3:material3-window-size-class:$material3"
 
     // Full screen
-    implementation "com.google.accompanist:accompanist-insets:0.14.0"
+    implementation "com.google.accompanist:accompanist-insets:$accompanist"
 
     // Swipe refresh
-    implementation "com.google.accompanist:accompanist-swiperefresh:0.24.9-beta"
+    implementation "com.google.accompanist:accompanist-swiperefresh:$swiperefresh"
 
     // Database
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
-    implementation 'io.realm.kotlin:library-base:1.0.2'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$ktx_coroutines_core"
+    implementation "io.realm.kotlin:library-base:$realm"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:$systemuicontroller"
 }
