--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,26 @@
 buildscript {
     ext {
         compose_version = '1.1.0-beta01'
+        nav_version = '2.5.2'
+        ktx_core = '1.9.0'
+        ktx_coroutines_core = '1.6.4'
+        koin_version = '3.2.1'
+        coil = '2.2.1'
+        realm = '1.0.2'
+        kt_serialization_json = '1.4.0'
+        swiperefresh = '0.24.9-beta'
+        accompanist = '0.14.0'
+        material3 = '1.0.0-beta02'
+        retrofit2 = '2.9.0'
+        gson = '2.8.9'
+        lifecycle_runtime = '2.5.1'
+        activity_compose = '1.5.1'
+        junit = '4.13.2'
+        junit_ext = '1.1.3'
+        espresso = '3.4.0'
+        appcompat = '1.5.1'
+        material = '1.6.1'
+        systemuicontroller = '0.26.4-beta'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
@@ -8,6 +28,7 @@ plugins {
     id 'com.android.library' version '7.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
     id 'io.realm.kotlin' version '1.0.2' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.10'
 }
 
 task clean(type: Delete) {
